--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   hexcolor: ^2.0.5
   shared_preferences: ^2.0.7
   smooth_page_indicator: ^1.0.0+2
+  fluttertoast: ^8.0.8
+  loading_indicator:
 
 
   # The following adds the Cupertino Icons font to your application.
