--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   fluttertoast: ^8.0.8
   loading_indicator:
+  carousel_slider: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
